fix: even better spacing

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -529,6 +529,6 @@ article ul li::before {
   }
 
   main {
-    padding: 24px 16px;
+    padding: 24px;
   }
 }
